--- a/-/test.html
+++ b/-/test.html
@@ -7,7 +7,7 @@
 	</head>
 
 	<body style=" width: 100%; height: 100%; margin: 0 ">
-		<div mol_view_root="$my_meter"></div>
+		<div mol_view_root="$my_debug"></div>
 		<script src="web.js"></script>
 	
 				<script src="/mol/build/client/client.js" charset="utf-8"></script>
