--- a/-/test.html
+++ b/-/test.html
@@ -1,4 +1,16 @@
-<!doctype html><meta charset="utf-8" /><body><script src="web.js" charset="utf-8"></script>
+<!doctype html>
+<html style="height: 100% ">
+
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+		<link href="my/counter/logo/logo.svg" rel="icon">
+	</head>
+
+	<body style=" width: 100%; height: 100%; margin: 0 ">
+		<div mol_view_root="$my_debug"></div>
+		<script src="web.js"></script>
+	
 				<script src="/mol/build/client/client.js" charset="utf-8"></script>
 				<script>
 					addEventListener( 'load', ()=> {
@@ -14,4 +26,6 @@
 
 					} )
 				</script>
-				
+				</body>
+
+</html>
